# membrane_ertmp_plugin

./: .gitignore  Cargo.toml  README.md  mix.exs
.github/workflows/: ci.yml  release.yml
examples/: sink_example.exs
lib/: membrane_ertmp_plugin.ex
lib/membrane/ertmp/: native.ex  sink.ex
native/ertmp/: Cargo.toml
native/ertmp/src/: lib.rs
native/membrane_ertmp/: Cargo.toml
native/membrane_ertmp/src/: lib.rs
test/fixtures/: input.aac  input.h264
test/membrane/ertmp/: sink_integration_test.exs
